# microcontroller_stuff

./: .gitignore  MEGA2560_base_bl.hex  README
AMS_LAB2/: AMS_LAB2.atsln
AMS_LAB2/AMS_LAB2/: AMS_LAB2.componentinfo.xml  AMS_LAB2.cppproj  main.cpp
ATMEGA2560/LCD_TFT_driver/: LCD_TFT_driver.atsln
ATMEGA2560/Lab3_LCD/: Lab3_LCD.atsln
ATMEGA2560/MY_MIDI_DEV/: MY_MIDI.atsln
ATMEGA2560/RTOS_MA/: RTOS_MA.atsln
ESP32/Hello_world/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32/MidiXylo/: CMakeLists.txt  sdkconfig  sdkconfig.old
ESP32/MidiXylo/main/: CMakeLists.txt  KConfig  adc_ctrl.cpp  adc_ctrl.hpp  display.cpp  hello_world_main.c  m_xylo.cpp  main.cpp  mux.cpp  mux.hpp  note_controller.cpp  open_lcd.cpp  peripheral_monitor.cpp  test_all.cpp  test_mux_adc.cpp
ESP32/MidiXylo/main/include/: adc_ctrl.hpp  display.hpp  m_xylo.hpp  mux.hpp  note_controller.hpp  peripheral_monitor.hpp
ESP32/MidiXylo/main/src/: adc_ctrl.cpp  display.cpp  m_xylo.cpp  mux.cpp  note_controller.cpp  peripheral_monitor.cpp
ESP32/MidiXylo/main/tests/: test_all.cpp
ESP32/MuxCtrl/: CMakeLists.txt  README.md
ESP32/OpenLCD/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
ESP32/UsbMidi/: sdkconfig.defaults
LCD_TFT_driver/LCD_TFT_driver/: LCD_TFT_driver.componentinfo.xml  TFTdriver.c  TFTdriver.h  main_test.cpp
Lab3_LCD/Lab3_LCD/: LCD_Test.c  Lab3_LCD.componentinfo.xml  Lab3_LCD.cproj  adc_control.c  adc_control.h  lcd162.h  lcd162_Partly.c  my_test.c  timer_control.c
MAX_MA/LAB8/: LAB8.cproj  MAX3421.c
MY_MIDI_DEV/: midi_spec_notes.txt
OpenLCD/: sdkconfig
(+127 files in other folders)
